# LatexToMarkdownConverter

./: AST.cpp  AST.h  CMakeLists.txt  README.md  astOutput.txt  input.tex  input.txt  lexer.l  output.md  parser.y  run.sh
googleTest/: CMakeLists.txt
googleTest/test/: test_AST.cpp
googleTest/test/testCases/: heading_input.tex
src/: AST.cpp  AST.h  Makefile  lexer.l  main.cpp  parser.y
